[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["SangUk Park <psycoder@pyler.tech>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
pyright = "^1.1.303"
pytest = "^7.3.1"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".mypy_cache",
    "thirdparty/*"
]

venvPath = "."
venv = ".venv"

useLibraryCodeForTypes = true

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.black]
line-length=80

[tool.isort]
profile="black"
